--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -10,6 +10,8 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="whale_dashboard.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
 </head>
 
 <body>
@@ -22,18 +24,24 @@
                 <p>Hyperliquid · Position Explorer</p>
             </div>
         </div>
+        <div class="header-center">
+            <button class="btn" id="scanBtn" onclick="startScan()">🔍 Scan Whales</button>
+            <button class="btn-pause" id="pauseBtn" onclick="togglePause()" style="display:none">⏸ Pause</button>
+            <button class="btn-stop" id="stopBtn" onclick="stopScan()">⏹ Stop</button>
+        </div>
         <div class="header-right">
             <div class="status-badge">
                 <div class="dot" id="dot"></div>
                 <span id="statusText">Ready</span>
             </div>
-            <button class="btn" id="scanBtn" onclick="startScan()">🔍 Scan Whales</button>
-            <button class="btn-pause" id="pauseBtn" onclick="togglePause()" style="display:none">⏸ Pause</button>
-            <button class="btn-stop" id="stopBtn" onclick="stopScan()">⏹ Stop</button>
         </div>
     </div>
 
     <div class="controls">
+        <div class="ctrl">
+            <label title="Recommended limit: 8-10 requests/s">Speed: <span id="speedVal">8</span></label>
+            <input type="range" id="speedRange" min="1" max="20" value="8" style="width: 80px" oninput="updateSpeed(this.value)">
+        </div>
         <div class="filter-sep"></div>
         <div class="ctrl">
             <label>Sort PnL window</label>
@@ -98,6 +106,11 @@
             <div class="stat-label">Largest Wallet</div>
             <div class="stat-value gold" id="sLargest">—</div>
         </div>
+    </div>
+
+    <div id="chart-section">
+        <canvas id="scatterChart" style="width: 100%; height: 100%;"></canvas>
+        <div class="chart-resizer" onmousedown="startChartResize(event)"></div>
     </div>
 
     <div class="table-wrap">
