--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -11,6 +11,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="whale_dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
 </head>
 
@@ -110,6 +112,7 @@
 
     <div id="chart-section">
         <canvas id="scatterChart" style="width: 100%; height: 100%;"></canvas>
+        <button id="resetZoomBtn" class="btn" style="position:absolute; top:10px; right:10px; z-index:20; padding: 4px 8px; font-size: 11px; background: rgba(59, 130, 246, 0.2); border: 1px solid rgba(59, 130, 246, 0.4);" onclick="resetChartZoom()">Reset Zoom</button>
         <div class="chart-resizer" onmousedown="startChartResize(event)"></div>
     </div>
 
