--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -75,6 +75,15 @@
             <input type="number" id="rankingLimit" value="10" min="1" max="100" class="col-filter" style="width:70px"
                 oninput="updateRankingLimit()">
         </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
+            <label title="Low & High leverage for color gradient">Color Lev</label>
+            <div style="display:flex; gap:4px">
+                <input type="number" id="colorMinLev" value="1" min="1" max="100" class="col-filter" style="width:50px" title="Low Leverage (Color Start)" onchange="updateColorSettings()">
+                <span style="color:var(--muted)">-</span>
+                <input type="number" id="colorMaxLev" value="50" min="1" max="100" class="col-filter" style="width:50px" title="High Leverage (Color End)" onchange="updateColorSettings()">
+            </div>
+        </div>
     </div>
 
     <!-- Quotes panel: shown when coins are selected -->
@@ -113,7 +122,12 @@
     <div id="chart-section">
         <canvas id="scatterChart" style="width: 100%; height: 100%;"></canvas>
         <button id="resetZoomBtn" class="btn" style="position:absolute; top:10px; right:10px; z-index:20; padding: 4px 8px; font-size: 11px; background: rgba(59, 130, 246, 0.2); border: 1px solid rgba(59, 130, 246, 0.4);" onclick="resetChartZoom()">Reset Zoom</button>
-        <div class="chart-resizer" onmousedown="startChartResize(event)"></div>
+        <div style="position:absolute; bottom:20px; right:10px; z-index:20; font-size: 11px; color: rgba(255,255,255,0.3); pointer-events: none; user-select: none;">
+            Pan: Drag &nbsp;|&nbsp; Zoom: Ctrl+Scroll &nbsp;|&nbsp; Area Zoom: Shift+Drag
+        </div>
+        <div class="chart-resizer" onmousedown="startChartResize(event)">
+            <div class="chart-resizer-handle"></div>
+        </div>
     </div>
 
     <div class="table-wrap">
