--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -84,6 +84,19 @@
                 <input type="number" id="colorMaxLev" value="50" min="1" max="100" class="col-filter" style="width:50px" title="High Leverage (Color End)" onchange="updateColorSettings()">
             </div>
         </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
+            <label>Chart Mode</label>
+            <div class="tabs">
+                <button class="tab active" data-chart="scatter" onclick="setChartMode(this)">Scatter</button>
+                <button class="tab" data-chart="column" onclick="setChartMode(this)">Column</button>
+            </div>
+        </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl" id="bubbleSizeCtrl">
+            <label title="Adjust bubble size">Radius: <span id="bubbleSizeVal">1.0</span>x</label>
+            <input type="range" id="bubbleSizeRange" min="0.1" max="3.0" step="0.1" value="1.0" style="width: 80px" oninput="updateBubbleSize(this.value)">
+        </div>
     </div>
 
     <!-- Quotes panel: shown when coins are selected -->
