feat: add aggregation control for column chart mode
- Add UI control to adjust bin count for column chart aggregation
- Persist aggregation factor in settings and restore on load
- Preserve zoom state when updating chart to reduce visual disruption
- Update chart without animation to minimize flicker

--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -97,6 +97,10 @@
             <label title="Adjust bubble size">Radius: <span id="bubbleSizeVal">1.0</span>x</label>
             <input type="range" id="bubbleSizeRange" min="0.1" max="3.0" step="0.1" value="1.0" style="width: 80px" oninput="updateBubbleSize(this.value)">
         </div>
+        <div class="ctrl" id="aggregationCtrl" style="display:none">
+            <label title="Adjust bin count for columns">Bins: <span id="aggregationVal">50</span></label>
+            <input type="range" id="aggregationRange" min="10" max="1000" step="10" value="50" style="width: 120px" oninput="updateAggregation(this.value)">
+        </div>
     </div>
 
     <!-- Quotes panel: shown when coins are selected -->
