--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -159,6 +159,17 @@
         </div>
     </div>
 
+    <div id="liq-chart-section">
+        <canvas id="liqChart" style="width: 100%; height: 100%;"></canvas>
+        <button id="resetLiqZoomBtn" class="btn" style="position:absolute; top:10px; right:10px; z-index:20; padding: 4px 8px; font-size: 11px; background: rgba(59, 130, 246, 0.2); border: 1px solid rgba(59, 130, 246, 0.4); display: none;" onclick="resetLiqChartZoom()">Reset Zoom</button>
+        <div style="position:absolute; bottom:20px; right:10px; z-index:20; font-size: 11px; color: rgba(255,255,255,0.3); pointer-events: none; user-select: none;">
+            Pan: Drag &nbsp;|&nbsp; Zoom: Ctrl+Scroll &nbsp;|&nbsp; Area Zoom: Shift+Drag
+        </div>
+        <div class="chart-resizer" onmousedown="startLiqChartResize(event)">
+            <div class="chart-resizer-handle"></div>
+        </div>
+    </div>
+
     <div class="table-wrap">
         <table>
             <thead>
