--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
             <label title="Adjust bin count for columns">Bins: <span id="aggregationVal">50</span></label>
             <input type="range" id="aggregationRange" min="10" max="1000" step="10" value="50" style="width: 120px">
         </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
+            <label title="Grid line spacing">Grid: <span id="gridSpacingVal">500</span></label>
+            <input type="number" id="gridSpacingRange" min="100" max="5000" step="100" value="500" style="width: 80px">
+        </div>
     </div>
 
     <!-- Quotes panel: shown when coins are selected -->
