feat: Implement persistent user settings for application state, filters, and chart configurations, alongside new chart implementations and supporting utilities.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
         </div>
         <div class="filter-sep"></div>
         <div class="ctrl">
+            <label title="Decimal places for prices and values">Decimals: <span id="decimalPlacesVal">2</span></label>
+            <input type="range" id="decimalPlacesRange" min="0" max="8" value="2" style="width: 80px">
+        </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
             <label>Columns</label>
             <div class="combobox" id="columnCombobox" style="width:110px">
                 <div class="combobox-input-wrap">
