--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@
             <label title="Grid line spacing">Grid: <span id="gridSpacingVal">500</span></label>
             <input type="number" id="gridSpacingRange" min="100" max="5000" step="100" value="500" style="width: 80px">
         </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
+            <label title="Leverage Colors">Colors</label>
+            <div style="display:flex; flex-direction:column; gap:4px; margin-top:2px">
+                <div style="display:flex; align-items:center; gap:8px">
+                    <span style="font-size:11px; color:#22c55e">Long Low:</span>
+                    <input type="color" id="colorLongLow" value="#22c55e" style="width:30px; height:20px; padding:0; border:none; cursor:pointer">
+                    <span style="font-size:11px; color:#16a34a">Long High:</span>
+                    <input type="color" id="colorLongHigh" value="#16a34a" style="width:30px; height:20px; padding:0; border:none; cursor:pointer">
+                </div>
+                <div style="display:flex; align-items:center; gap:8px">
+                    <span style="font-size:11px; color:#ef4444">Short Low:</span>
+                    <input type="color" id="colorShortLow" value="#ef4444" style="width:30px; height:20px; padding:0; border:none; cursor:pointer">
+                    <span style="font-size:11px; color:#dc2626">Short High:</span>
+                    <input type="color" id="colorShortHigh" value="#dc2626" style="width:30px; height:20px; padding:0; border:none; cursor:pointer">
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Quotes panel: shown when coins are selected -->
