--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                     <label title="Casas decimais para exibição de preços e valores">Casas Decimais: <span id="decimalPlacesVal">2</span></label>
                     <input type="number" id="decimalPlacesRange" min="0" max="8" value="2" style="width: 80px">
                 </div>
+                <div class="ctrl">
+                    <label title="Tamanho da fonte para linhas normais">Fonte Normal: <span id="fontSizeVal">12</span>px</label>
+                    <input type="number" id="fontSizeRange" min="10" max="20" value="12" style="width: 80px">
+                </div>
+                <div class="ctrl">
+                    <label title="Tamanho da fonte para linhas com estrelinha (endereços conhecidos)">Fonte Conhecidos: <span id="fontSizeKnownVal">14</span>px</label>
+                    <input type="number" id="fontSizeKnownRange" min="10" max="24" value="14" style="width: 80px">
+                </div>
             </div>
 
             <!-- Chart Section -->
@@ -246,6 +254,16 @@
             <div class="ctrl">
                 <label title="Decimal places for prices and values">Decimals: <span id="decimalPlacesVal">2</span></label>
                 <input type="number" id="decimalPlacesRange" min="0" max="8" value="2" style="width: 80px">
+            </div>
+            <div class="filter-sep"></div>
+            <div class="ctrl">
+                <label title="Font size for normal rows">Font Normal: <span id="fontSizeValDesktop">12</span>px</label>
+                <input type="number" id="fontSizeRangeDesktop" min="10" max="20" value="12" style="width: 80px">
+            </div>
+            <div class="filter-sep"></div>
+            <div class="ctrl">
+                <label title="Font size for rows with star (known addresses)">Font Known: <span id="fontSizeKnownValDesktop">14</span>px</label>
+                <input type="number" id="fontSizeKnownRangeDesktop" min="10" max="24" value="14" style="width: 80px">
             </div>
         </div>
 
