feat: Implement scatter plot chart with dynamic data visualization, custom scaling, and UI panel integration.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     <div class="tabs">
                         <button class="tab active" data-chart="scatter" title="Gráfico de dispersão">Dispersão</button>
                         <button class="tab" data-chart="column" title="Gráfico de colunas">Colunas</button>
+                        <button class="tab" data-chart="lines" title="Linhas de Suporte/Resistência">Linhas</button>
                     </div>
                 </div>
                 <div class="ctrl" id="bubbleSizeCtrl">
@@ -277,6 +278,7 @@
                 <div class="tabs">
                     <button class="tab active" data-chart="scatter" title="Gráfico de dispersão">Scatter</button>
                     <button class="tab" data-chart="column" title="Gráfico de colunas">Column</button>
+                    <button class="tab" data-chart="lines" title="Support/Resistance Lines">Lines</button>
                 </div>
             </div>
             <div class="filter-sep"></div>
