--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="ctrl">
+                    <label title="Volume BTC mínimo para destaque">Min Volume BTC (★)</label>
+                    <input type="number" id="minBtcVolume" value="0" min="0" step="0.1" style="width:100%" title="Volume BTC mínimo para destacar carteiras com estrela">
+                </div>
             </div>
         </div>
     </div>
@@ -356,6 +360,10 @@
                         <input type="number" id="colorMaxLev" value="50" min="1" max="100" style="width:35px; padding:2px" title="High Color Leverage">
                     </div>
                 </div>
+            </div>
+            <div class="ctrl">
+                <label title="Volume BTC mínimo para destaque">Min Volume BTC (★)</label>
+                <input type="number" id="minBtcVolume" value="0" min="0" step="0.1" style="width:80px" title="Volume BTC mínimo para destacar carteiras com estrela">
             </div>
         </div>
     </div>
