--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                     <label title="Transparência dos pontos no gráfico">Transparência: <span id="bubbleOpacityVal">0.6</span></label>
                     <input type="number" id="bubbleOpacityRange" min="0.1" max="1.0" step="0.05" value="0.6" style="width: 100%">
                 </div>
+                <div class="ctrl" id="lineThicknessCtrl" style="display:none">
+                    <label title="Espessura das linhas no gráfico">Espessura: <span id="lineThicknessVal">2</span>px</label>
+                    <input type="number" id="lineThicknessRange" min="1" max="10" step="1" value="2" style="width: 100%">
+                </div>
                 <div class="ctrl" id="aggregationCtrl" style="display:none">
                     <label title="Número de bins para gráfico de colunas">Bins: <span id="aggregationVal">50</span></label>
                     <input type="number" id="aggregationRange" min="10" max="1000" step="10" value="50" style="width: 100%">
@@ -293,6 +297,10 @@
             <div class="ctrl" id="bubbleOpacityCtrl">
                 <label>Opacity: <span id="bubbleOpacityVal">0.6</span></label>
                 <input type="number" id="bubbleOpacityRange" min="0.1" max="1.0" step="0.05" value="0.6" style="width: 80px">
+            </div>
+            <div class="ctrl" id="lineThicknessCtrl" style="display:none">
+                <label>Thickness: <span id="lineThicknessVal">2</span>px</label>
+                <input type="number" id="lineThicknessRange" min="1" max="10" step="1" value="2" style="width: 80px">
             </div>
             <div class="ctrl" id="aggregationCtrl" style="display:none">
                 <label>Bins: <span id="aggregationVal">50</span></label>
