--- a/index.html
+++ b/index.html
@@ -595,18 +595,27 @@
         </table>
     </div>
 
-    <div class="auto-loading" id="autoLoading">
-        <span class="spinner"></span> Loading more whales in background…
-    </div>
+        <div class="auto-loading" id="autoLoading">
+            <span class="spinner"></span> Loading more whales in background…
+        </div>
 
-    <script type="module" src="js/main.js"></script>
-    
-    <!-- Service Worker Registration -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then((registration) => {
+        <script type="module" src="js/main.js"></script>
+        <script type="module" src="debug_scan.js"></script>
+        
+        <!-- Service Worker Registration -->
+        <script>
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/sw.js')
+                        .then((registration) => {
+                            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                        })
+                        .catch((error) => {
+                            console.log('ServiceWorker registration failed: ', error);
+                        });
+                });
+            }
+        </script>
                         console.log('ServiceWorker registration successful with scope: ', registration.scope);
                     })
                     .catch((error) => {
