feat: improve data persistence and virtual scroll rendering
- Update cache version to v2 for service worker updates
- Enhance getPnlForWindow to support both old and new data formats
- Fix virtual scroll implementation to use proper table row structure
- Improve data storage with better error handling and logging
- Add periodic saves during streaming to prevent data loss
- Update script versioning to ensure fresh cache usage

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <span class="spinner"></span> Loading more whales in background…
             </div>
 
-            <script type="module" src="js/main.js"></script>
+            <script type="module" src="js/main.js?v=2"></script>
 
             <!-- Service Worker Registration -->
             <script>
